@@ -27,6 +27,7 @@ EXIT_UNSUPPORTED_STORAGE_ENGINE,25,"unsupported storage engine","Will be returne
 EXIT_ICU_INITIALIZATION_FAILED,26,"failed to initialize ICU library","Will be returned if icudtl.dat is not found, of the wrong version or invalid. Check for an incorrectly set ICU_DATA environment variable"
 EXIT_TZDATA_INITIALIZATION_FAILED,27,"failed to locate tzdata","Will be returned if tzdata is not found"
 EXIT_RESOURCES_TOO_LOW,28,"the system restricts resources below what is required to start arangod","Will be returned if i.e. ulimit is too restrictive"
+EXIT_SST_FILE_CHECK,29,"sst file check unsuccessful","Will be returned when either sst file open or sst file check was unsuccessful i.e. sst file is not valid"
 # network
 #EXIT_NO_COORDINATOR
 #EXIT_NO_AGENCY
