@@ -1,6 +1,9 @@
 devel
 -----
 
+* Added startup option `--rocksdb.verify-sst` to validate sst files already 
+  present in the database directory on startup. Default: false.
+
 * BTS-907: Fixed some rare SortNode related optimizer issues, when at least two
   or more SortNodes appeared in the AQL execution plan.
 
